# real_crypto_carry_ibkr

./: .gitignore  DATA_REQUIREMENTS.md  ORDERING_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ibkr-paper-rebalance.yml  push_dashboard_logs.yml
config/: default.yaml
data_samples/: cme_curve.schema.csv  long_prices.schema.csv
logs/decisions/: decisions.csv  latest_decision.csv
logs/health/: health_status.json
logs/portfolio/: portfolio.csv
notebooks/: Real_Crypto_Carry_IBKR_Colab.ipynb
scripts/: build_artifact.py  preflight_ibkr_paper.py  pull_ibkr_history.py  run_ibkr_rebalance.py  validate_ibkr_contracts.py  write_dashboard_snapshot.py
src/real_crypto_carry_ibkr/: __init__.py  artifacts.py  config.py  dashboard_logs.py  data.py  ibkr_execution.py  metrics.py  strategy.py
tests/: test_artifact_status.py  test_ibkr_execution.py  test_real_data_gates.py  test_run_ibkr_rebalance.py  test_workflow_shell.py  test_write_dashboard_snapshot.py
