[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-crypto-carry-ibkr"
version = "0.1.0"
description = "Real-data-only crypto futures carry research and IBKR execution gates"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "ib_insync>=0.9.86",
]

[tool.setuptools.packages.find]
where = ["src"]
